# GraniteLedger1

./: CONTRIBUTING.md  LICENSE  README.md  app.py  environment.yml  github_formatter.py  io_loader.py  main.py  normalization.py  pyproject.toml  replit.md  requirements.txt  run_streamlit_app.bat
cli/: __init__.py  run.py  validate_loads.py
common/: __init__.py  regions_schema.py
config/: dispatch.py  policy_loader.py
dispatch/: __init__.py  capacity_expansion.py  interface.py  lp_network.py  lp_single.py  stub.py
docs/: PHASE1_TRANSMISSION.md  README.md  README_inputs_csv.md  developer_guide.md  frames_rebuild_plan.md  gui_refactor_plan.md  html_documentation.bat  run_loop_overhaul.md  run_sphinx_v2.bat
engine/: __init__.py  allowance.py  audits.py  cap_mode.py  compute_intensity.py  constants.py  constants_overrides.py  data_paths.py  deepdoc.py  emissions.py  expansion_candidates.py  manifest.py  normalization.py  nrel_costs.py  orchestrate.py  outputs.py  run_loop.py  run_loop_shims.py  sensitivity.py  settings.py
envs/: conda_env.yml  env-setup.bat
granite_io/: __init__.py  frames_api.py
gui/: __init__.py  app.py  async_example.py  async_executor.py  async_simulation_wrapper.py  compute_intensity.py  config_adapter.py  dash_app.py  demand_helpers.py  engine_bridge.py  engine_module.py  forecast_helpers.py  helpers.py  module_settings.py  outputs_visualization.py  price_adapter.py  price_floor.py  progress_tracker.py  recent_results.py  region_metadata.py  rggi.py  session_state.py
input/: ei_units.csv
io/: __init__.py  frames_api.py
(+324 files in other folders)
